--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-primary {
+    @apply 
+      flex flex-row items-center justify-center gap-2
+      rounded-md
+      px-4 py-3
+      text-white bg-sky-500 hover:bg-sky-600 
+      transition-colors;
+  }
+
+  .btn-muted {
+    @apply rounded-md px-4 py-3 hover:bg-sky-300 hover:bg-opacity-50 transition-colors transition-opacity;
+  }
+
+  .input {
+    @apply rounded-md border-none bg-white px-4 py-3 outline-none autofill:shadow-[inset_0_0_0px_1000px_rgb(255,255,255)] focus:border-none focus:outline-none focus:ring-2 focus:ring-sky-500;
+  }
+}
