--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,8 +8,9 @@
       flex flex-row items-center justify-center gap-2
       rounded-md
       px-4 py-3
-      text-white bg-sky-500 hover:bg-sky-600 
-      transition-colors;
+      text-white bg-sky-500 hover:bg-sky-600
+      shadow-md shadow-sky-500/50 hover:shadow-sky-600/50
+      transition duration-200 ease-in-out;
   }
 
   .btn-muted {
