--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,19 +5,27 @@
 @layer components {
   .btn-primary {
     @apply 
-      flex flex-row items-center justify-center gap-2
-      rounded-md
-      px-4 py-3
-      text-white bg-sky-500 hover:bg-sky-600
-      shadow-md shadow-sky-500/50 hover:shadow-sky-600/50
-      transition duration-200 ease-in-out;
+      flex flex-row items-center justify-center gap-2 rounded-md px-4 py-3
+      text-white bg-sky-500 hover:bg-sky-600 shadow-md shadow-sky-500/50
+      hover:shadow-sky-600/50 transition duration-200 ease-in-out;
   }
 
   .btn-muted {
-    @apply rounded-md px-4 py-3 hover:bg-sky-300 hover:bg-opacity-50 transition-colors transition-opacity;
+    @apply
+      rounded-md px-4 py-3 hover:bg-sky-300 hover:bg-opacity-50 transition 
+      duration-200 ease-in-out;
   }
 
   .input {
-    @apply rounded-md border-none bg-white px-4 py-3 outline-none autofill:shadow-[inset_0_0_0px_1000px_rgb(255,255,255)] focus:border-none focus:outline-none focus:ring-2 focus:ring-sky-500;
+    @apply
+      rounded-md border-none bg-white px-4 py-3 outline-none
+      autofill:shadow-[inset_0_0_0px_1000px_rgb(255,255,255)] focus:border-none
+      focus:outline-none focus:ring-2 focus:ring-sky-500;
+  }
+}
+
+@layer utilities {
+  .without-ring {
+    @apply focus:ring-0 focus:ring-offset-0;
   }
 }
