--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,9 +18,10 @@
 
   .input {
     @apply
-      rounded-md border-none bg-white px-4 py-3 outline-none
+      rounded-md border-none bg-sky-50 px-4 py-3 outline-none
       autofill:shadow-[inset_0_0_0px_1000px_rgb(255,255,255)] focus:border-none
-      focus:outline-none focus:ring-2 focus:ring-sky-500;
+      focus:outline-none focus:ring-2 focus:ring-sky-500 
+      placeholder:text-sky-800;
   }
 }
 
