feat(timeclock): begin implement time clock

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,10 +18,9 @@
 
   .input {
     @apply
-      rounded-md border-none bg-sky-50 px-4 py-3 outline-none
-      autofill:shadow-[inset_0_0_0px_1000px_rgb(255,255,255)] focus:border-none
-      focus:outline-none focus:ring-2 focus:ring-sky-500 
-      placeholder:text-sky-800;
+      rounded-md border-none bg-sky-50 px-4 py-3 outline-none focus:border-none
+      autofill:shadow-[inset_0_0_0px_1000px_rgb(255,255,255)] focus:outline-none
+      focus:ring-2 focus:ring-sky-500 placeholder:text-sky-800;
   }
 }
 
