feat(admin): user disable/enable & password reset

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,18 @@
       hover:shadow-sky-600/50 transition duration-200 ease-in-out;
   }
 
+  .btn-danger {
+    @apply 
+      flex flex-row items-center justify-center gap-2 rounded-md px-4 py-3
+      text-white bg-red-500 hover:bg-red-600 shadow-md shadow-red-500/50
+      hover:shadow-red-600/50 transition duration-200 ease-in-out;
+
+    &[disabled] {
+      @apply bg-red-300 shadow-red-300/50 cursor-not-allowed;
+    }
+  }
+
+
   .btn-muted {
     @apply
       rounded-md px-4 py-3 hover:bg-sky-300 hover:bg-opacity-50 transition 
